# acip

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: lint.yaml
acip/: __init__.py
acip/core/: README_template.md  __init__.py  acip_model.py  parametrized_layer.py  parametrized_model.py  projected_layer.py  requirements.txt  utils.py
acip/data/: dataset.py
acip/entrypoints/: __init__.py  acip_compress.py  acip_entrypoint.py  acip_eval.py  acip_finetune.py  acip_push_to_hub.py  utils.py
acip/eval/: eval_efficiency.py  eval_generation.py  eval_lm_eval.py  eval_model_size.py  eval_ppl.py  evaluator.py  utils.py
acip/model/: model_factory.py  tokenizer_factory.py
acip/training/: acip.py  benchmarking.py  monitoring.py  objective.py  optimizer.py  pl_module.py  utils.py
acip/utils/: utils.py
config/data/: base.yaml  c4.yaml  wikitext2.yaml
config/entrypoints/: acip_compress.yaml  acip_eval.yaml  acip_finetune.yaml  acip_push_to_hub.yaml  base.yaml
config/entrypoints/hub/: default.yaml  llama1_13b.yaml  llama2_7b.yaml  llama31_8b.yaml  qwen25_14b.yaml
config/entrypoints/paths/: default.yaml
config/entrypoints/storage/: acip_compress_compact.yaml  acip_compress_full.yaml  acip_finetune_compact.yaml  acip_finetune_full.yaml  acip_push_to_hub.yaml  base.yaml
config/eval/: default.yaml
config/eval/evaluator/: efficiency.yaml  generation.yaml  lm_eval.yaml  model_size.yaml  none.yaml  ppl.yaml
config/experiment/paper/llama1_13b/: compress.yaml  finetune.yaml
config/experiment/paper/llama1_7b/: compress.yaml
config/experiment/paper/llama1_7b/ablation/: compress_efficiency_analysis.yaml  compress_mask_only.yaml  compress_post_tune.yaml  compress_quantized.yaml  compress_quantized_transfer.yaml  compress_sv_score_map.yaml  compress_sweep_stop.yaml  compress_sweep_stop_score.yaml  eval_pruning_reset_layers.yaml  (+2 more)
config/experiment/paper/llama2_13b/: compress.yaml  finetune.yaml
config/experiment/paper/llama2_7b/: finetune.yaml
config/experiment/paper/llama31_8b/: compress.yaml  finetune.yaml
config/experiment/paper/mistral03_7b/: finetune.yaml
config/experiment/paper/qwen25_14b/: compress.yaml
config/experiment/paper/qwen25_3b/: compress.yaml  finetune.yaml
config/experiment/paper/qwen25_7b/: compress.yaml  finetune.yaml
config/hydra/: default.yaml  no_output.yaml
config/model/base/: default.yaml  llama1_13b.yaml  llama1_7b.yaml  llama2_13b.yaml  llama2_7b.yaml  llama31_8b.yaml  mistral03_7b.yaml  qwen25_14b.yaml  qwen25_3b.yaml  qwen25_7b.yaml
config/model/model_factory/: acip_compress.yaml  acip_finetune.yaml
config/model/model_factory/acip_config/: default.yaml
config/model/tokenizer_factory/: default.yaml  llama.yaml
config/options/: no_benchmarking.yaml  no_monitoring.yaml  no_output.yaml  verbose.yaml
config/training/: base.yaml
config/training/acip/: default.yaml  sv_score_map.yaml
config/training/benchmarking/: default.yaml  generate.yaml  light.yaml
config/training/monitoring/: acip_efficiency_monitor.yaml  gradient_monitor.yaml  model_monitor_compress.yaml  model_monitor_finetune.yaml
config/training/objective/: acip_compress.yaml  acip_finetune.yaml
config/training/optimizer/: acip_compress.yaml  acip_finetune.yaml  base.yaml
docs/: CNAME  _config.yml
scripts/: experiments_paper.sh  push_model_to_hub.sh
tests/model/: conftest.py  test_eval.py  test_pretrained.py  utils.py
tests/parametrization/: test_svd_layer.py  test_utils.py
(+5 files in other folders)
